--- a/.github/workflows/go_build_and_test.yml
+++ b/.github/workflows/go_build_and_test.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -race -covermode=atomic -coverprofile=coverage.out -v ./...
 
     - name: Upload coverage reports
       uses: codecov/codecov-action@v4.0.1
